# benchmark-frequent-itemsets

./: .gitignore  README.md  benchmark.sh  frequent_itemsets.ipynb  main.py  preprocessing.ipynb  preprocessing.py  pyproject.toml  readme.md  results.ipynb
lib/: eclat_mlxtend.py
results/: apriori_0.025_None_None.csv  apriori_itemsets.bak.csv  apriori_results_01_single.csv  apriori_results_02_single.csv  apriori_results_04_single.csv  benchmark.csv  benchmark_i5-9400F.csv  eclat_0.025_None_None.csv  fp_growth_0.015_None_None.csv  fp_growth_0.025_None_None.csv
scripts/: apriori.py  benchmark.py  eclat.py  eclat_v2.py  fp_growth.py  preprocessing.py  sparcity.py
